--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
        <!--Heading End-->
        <tr>
         <td width="40%">
-           <img src="Images/p1.png" alt="Dr. Nikhlesh Pathik" width="90%">
+           <img src="Images/p1.jpeg" alt="Dr. Nikhlesh Pathik" width="90%">
         </td>
         <td width="60%">
            <font face="arial" color="#ffffff" size="4">
@@ -147,7 +147,7 @@
        <tr>
         <td width="33%">
            <a href="Mummy.html">
-            <img src="Images/PHOTO.png" widht="100%">
+            <img src="Images/PHOTO.jpeg" widht="100%">
            </a>
         </td>
        </tr>
